--- a/source/templates/home_page.html
+++ b/source/templates/home_page.html
@@ -101,7 +101,7 @@
 			<label for="ldate">Data</label><br />
 			<input type="date" id="ldate" name="ldate"><br />
 			<label for="ltime">Hora</label><br />
-			<input id="ltime" type="time" step="1" /><br />
+			<input id="ltime" name="ltime" type="time" step="1" ><br />
 			<label for="lmessage">Mensagem</label><br />
 			<textarea id="lmessage" name="lmessage" rows="10" cols="25"></textarea><br /><br />
 			<input type="submit" value="Agendar">
